# latency-lab

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  latency.html
.github/workflows/: build.yml
example/: README.md
example/analysis/: CMakeLists.txt  main.cpp
example/analysis/events/: outbound.hpp
example/analysis/output/: analysis.txt
example/analysis/records/: inbound.hpp  outbound.hpp
example/comparison/: CMakeLists.txt  main.cpp  settings.ini
example/comparison-data/: 2017_06_06.outbound.events
example/comparison/data/: 2017_06_06.inbound.events
example/comparison/outbound/: 10x.outbound  2x.outbound
example/comparison/output/: comparison.html  omi.css  omi.js
example/data/: inbound.events  outbound.events
example/email/: CMakeLists.txt  README.md  main.cpp
example/email/cme/: fix.hpp  sbe.hpp
example/email/output/: email.html
example/events/: inbound.hpp  outbound.hpp
example/events/tshark/: outbound.txt
example/matching/: CMakeLists.txt  main.cpp
example/matching/events/: inbound.hpp  outbound.hpp
example/matching/output/: latency.html
example/outputs/: latency.html  matched.infos
example/program/: analyzer.cpp  args.hpp  charter.cpp  matcher.cpp
example/program/comparison/: main.cpp
example/program/matching/: main.cpp
example/program/report/: args.hpp  main.cpp  options.hpp
example/race/: CMakeLists.txt  main.cpp
example/race/output/: omi.css  race.html
example/report/: CMakeLists.txt  main.cpp  settings.ini
example/report/cme/: fix.hpp  sbe.hpp
example/report/output/: report.html
example/tshark/: inbound.txt  outbound.txt
example/vs/: Examples.sln  README.md
example/vs/Latency.Analysis/: --html-report  Latency.Analysis.vcxproj  Latency.Analysis.vcxproj.filters
example/vs/Latency.Comparison/: Latency.Comparison.vcxproj  Latency.Comparison.vcxproj.filters
example/vs/Latency.Email/: Latency.Email.vcxproj  Latency.Email.vcxproj.filters  packages.config
example/vs/Latency.Matching/: Latency.Matching.vcxproj  Latency.Matching.vcxproj.filters  packages.config
example/vs/Latency.Race/: Latency.Race.vcxproj  Latency.Race.vcxproj.filters
example/vs/Latency.Report/: Latency.Report.vcxproj  Latency.Report.vcxproj.filters
example/vs/Matcher/: Matcher.vcxproj.filters  packages.config
example/vs/Tests/: Tests.vcxproj  Tests.vcxproj.filters
linux/: CMakeLists.txt  README.md
omi/analysis/: calculate.hpp  delta.hpp  deltas.hpp  percentile.hpp  percentiles.hpp  results.hpp  statistics.hpp  summary.hpp
omi/collection/: calculate.hpp  out.hpp  percentile.hpp  range.hpp  size.hpp  transform.hpp
omi/compare/: natural.hpp
omi/container/: calculate.hpp  definitions.hpp
omi/css/: declarations.hpp  rules.hpp
omi/directory/: parsing.hpp
omi/event/: asserts.hpp  database.hpp  dictionary.hpp  events.hpp  info.hpp  inputs.hpp  list.hpp  match.hpp  matcher.hpp  matches.hpp
omi/html/: attributes.hpp  close.hpp  declarations.hpp  div.hpp  doctype.hpp  elements.hpp  graph.hpp  head.hpp  headings.hpp  link.hpp  meta.hpp  open.hpp  paragraph.hpp  script.hpp  sections.hpp  src.hpp  table.hpp  tag.hpp  title.hpp
omi/javascript/: paging.hpp
omi/javascript/google/: chart.hpp  (+1 more)
omi/latency/: analysis.hpp  args.hpp  comparison.hpp  email.hpp  matching.hpp  options.hpp  race.hpp  report.hpp
omi/match/: events.hpp  info.hpp  inputs.hpp  paths.hpp  result.hpp  results.hpp  run.hpp  runs.hpp  timestamps.hpp
omi/program/: options.hpp  settings.hpp
omi/sequence/: calculate.hpp  out.hpp  percentile.hpp  range.hpp  transform.hpp
omi/source/: read.hpp  whitespace.hpp  write.hpp
omi/styles/: css.hpp  one.hpp  standard.hpp
omi/stylesheet/: options.hpp  standard.hpp
omi/table/: percentiles.hpp  sections.hpp  statistics.hpp  summary.hpp
omi/test/: definitions.hpp  event.hpp
omi/text/: natural.hpp
omi/types/: frame.hpp  period.hpp  race.hpp  seqnum.hpp  sequence.hpp  timespan.hpp  timestamp.hpp  tokenizer.hpp
omi/utility/: autotimer.hpp  options.hpp  stopwatch.hpp  timer.hpp
omi/wireshark/: database.hpp  event.hpp  events.hpp  frame.hpp  match.hpp  matcher.hpp  matches.hpp  matching.hpp  options.hpp  report.hpp  tokenizer.hpp
tests/: CMakeLists.txt  definitions.hpp  tests.cpp
tests/analysis/: percentile.cpp  percentiles.cpp  statistics.cpp
tests/collection/: calculate.cpp  percentile.cpp
tests/match/: timestamps.cpp
tests/types/: period.cpp  race.cpp  sequence.cpp  timespan.cpp  timestamp.cpp
vs/Analyzer/: Analyzer.vcxproj  Analyzer.vcxproj.filters  packages.config
vs/Latency.Email/: Latency.Email.vcxproj.filters
vs/Latency.Matching/: Latency.Matching.vcxproj.filters
vs/Latency.Report/: Latency.Report.vcxproj  Latency.Report.vcxproj.filters
vs/Matcher/: Matcher.vcxproj  README.md
vs/Tests/: Tests.vcxproj  Tests.vcxproj.filters
windows/: Example.sln  Examples.sln  README.md
windows/Analyzer/: Analyzer.vcxproj  Analyzer.vcxproj.filters
windows/Charter/: Charter.vcxproj  Charter.vcxproj.filters
windows/Latency.Comparison/: Latency.Comparison.vcxproj  Latency.Comparison.vcxproj.filters
windows/Latency.Email/: Latency.Email.vcxproj  Latency.Email.vcxproj.filters
windows/Latency.Matching/: Latency.Matching.vcxproj  Latency.Matching.vcxproj.filters
windows/Latency.Report/: Latency.Report.vcxproj  Latency.Report.vcxproj.filters  README.md
windows/Matcher/: Matcher.vcxproj  Matcher.vcxproj.filters  packages.config
windows/Tests/: Tests.vcxproj  Tests.vcxproj.filters  packages.config
(+35 files in other folders)
